fixed modal so that it appears upon clicking add tasks button. updated html doc so there are more divs wrapping the modal with rquired classes for dialogue, content, header, body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,22 +15,25 @@ body {
   cursor: grab;
 }
 
-.modal {
-  background-color: aqua;
+#formModal {
   width: 100%;
   height: 100%;
+  display: none;
 }
+
+
 
 .modal-content{
 background-color: aqua;
 margin: 10px auto;
-padding: 10%;
-width: auto;
+padding: 20px;
+width: 80%;
 border: 2px solid green;
 }
 
 form {
-background-color: blue;
-height: 80%;
-width: 80%;
+  background-color: pink;
 }
+
+
+
